--- a/Web/Areas/Admin/Views/Author/Edit.cshtml
+++ b/Web/Areas/Admin/Views/Author/Edit.cshtml
@@ -1,5 +1,5 @@
-﻿@using Core.ViewModels.Author
-@model EditAuthorModel
+﻿@using Core.Authors.Queries.Common
+@model AuthorModel
 @{
     ViewData["Title"] = "Edit Author";
 }
