--- a/Web/Areas/Admin/Views/Author/Create.cshtml
+++ b/Web/Areas/Admin/Views/Author/Create.cshtml
@@ -1,5 +1,5 @@
-﻿@using Core.ViewModels.Author
-@model CreateAuthorModel
+﻿@using Core.Authors.Commands.Create
+@model CreateAuthorCommand
 
 @{
     ViewData["Title"] = "Create Author";
