--- a/Web/Areas/Admin/Views/Author/Create.cshtml
+++ b/Web/Areas/Admin/Views/Author/Create.cshtml
@@ -1,5 +1,5 @@
-﻿@using Core.Authors.Commands.Create
-@model CreateAuthorCommand
+﻿@using Core.Authors.Queries.Common
+@model AuthorModel
 
 @{
     ViewData["Title"] = "Create Author";
