Fixing Book and Genre many-to-many relations by explicitly adding a mapping table between them. Refactoring CreateBookCommand

--- a/Web/Areas/Admin/Views/Genre/Edit.cshtml
+++ b/Web/Areas/Admin/Views/Genre/Edit.cshtml
@@ -1,5 +1,5 @@
-﻿@using Core.ViewModels.Genre
-@model EditGenreModel
+﻿@using Core.Genres.Queries.Common;
+@model GenreModel
 
 @{
     ViewData["Title"] = "Edit Genre";
