--- a/Web/Views/Shared/_ReadPartial.cshtml
+++ b/Web/Views/Shared/_ReadPartial.cshtml
@@ -1,5 +1,5 @@
-﻿@using Core.ViewModels.Book
-@model BookDetailsModel
+﻿@using Core.Books.Queries.Details
+@model BookDetailsOutputModel;
 
 @if (ViewBag.UserId != null)
 {
