Fixing book details displays in admin

--- a/Web/Areas/Admin/Views/Book/Details.cshtml
+++ b/Web/Areas/Admin/Views/Book/Details.cshtml
@@ -109,7 +109,7 @@
       </section>
     </div>
 
-@foreach (var r in ViewBag.Reviews)
+@foreach (var r in Model.Reviews)
 {
     <div style="background-color: orchid">
         <h5>@r.UserName</h5>
