--- a/Web/Areas/Admin/Views/Genre/Create.cshtml
+++ b/Web/Areas/Admin/Views/Genre/Create.cshtml
@@ -1,5 +1,5 @@
-﻿@using Core.ViewModels.Genre
-@model CreateGenreModel
+﻿@using Core.Genres.Commands.Create
+@model CreateGenreCommand
 
 @{
     ViewData["Title"] = "Create";
