--- a/Web/Areas/Admin/Views/Book/Create.cshtml
+++ b/Web/Areas/Admin/Views/Book/Create.cshtml
@@ -1,5 +1,5 @@
-﻿@using Core.ViewModels.Book
-@model CreateBookModel
+﻿@using Core.Books.Commands.Create;
+@model CreateBookCommand
 
 @{
     ViewData["Title"] = "Create Book";
