--- a/Web/Areas/Admin/Views/Shared/Components/AdminGenres/Default.cshtml
+++ b/Web/Areas/Admin/Views/Shared/Components/AdminGenres/Default.cshtml
@@ -1,12 +1,12 @@
-﻿@using Core.ViewModels.Genre
-@model IEnumerable<ListGenreModel>
+﻿@using Core.Genres.Queries.Common
+@model IEnumerable<GenreModel>
 
 <form action="#">
     <div class="form-group d-flex justify-content-end">
 
         <select name="genres" id="genres" class="selectpicker" multiple title="Genres" data-width="130px">
 
-            @foreach (ListGenreModel g in Model)
+            @foreach (GenreModel g in Model)
             {
                 <option value=@g.Name style="font-size: 1rem">
                     @g.Name
