--- a/Web/Views/Subscription/Subscribe.cshtml
+++ b/Web/Views/Subscription/Subscribe.cshtml
@@ -1,5 +1,5 @@
-﻿@using Core.ViewModels.Subscription
-@model CreateSubscriptionModel
+﻿@using Core.Subscriptions.Commands.Create;
+@model SubscribeCommand
 
 @{
     ViewData["Title"] = "Subscribe";
