--- a/Web/Views/User/Profile.cshtml
+++ b/Web/Views/User/Profile.cshtml
@@ -1,4 +1,4 @@
-﻿@using Core.ViewModels.User
+﻿@using Core.Users.Queries.GetProfile;
 @model UserProfileModel
 @{
     ViewData["Title"] = @Model.UserName;
