Fixing admins not able to add and delete reviews

--- a/Web/Views/Shared/_ReadPartial.cshtml
+++ b/Web/Views/Shared/_ReadPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Core.Books.Queries.Details
 @model BookDetailsOutputModel;
 
-@if (ViewBag.UserId != null)
+@if (Model.UserId != null)
 {
 
     <a asp-action="Read"
