--- a/Web/Areas/Admin/Views/Book/Details.cshtml
+++ b/Web/Areas/Admin/Views/Book/Details.cshtml
@@ -35,20 +35,12 @@
                  class="img-fluid"
                  id="cover" />
             <partial name="_ReadPartial" />
-            <a class="btn navbutton"
-               asp-action="Edit"
-               asp-route-id=@Model.Id
-               style="font-size: 1.5rem; width: 80%; margin-top: 5%">Edit</a>
-            <a class="btn navbutton"
-               asp-action="Delete"
-               asp-route-id=@Model.Id
-               style="font-size: 1.5rem; width: 80%; margin-top: 5%">Delete</a>
         </div>
       </div>
 
       <!-- Create Review -->
-
-      <div class="col" style="background-color: #212529; margin-top: 4rem">
+    <partial name="_ReviewPartial" />
+      @* <div class="col" style="background-color: #212529; margin-top: 4rem">
         <h2 style="padding: 1rem; color: white">Review:</h2>
       </div>
       <div>
@@ -68,61 +60,39 @@
             >Submit</a
           >
         </div>
-      </div>
+      </div> *@
 
       <!-- Created Review -->
       <section style="background-color: rgb(243, 194, 166)">
-        <div class="col text-center" style="background-color: #212529">
-          <h2 style="margin-top: 3%; padding: 1rem; color: white">Heathen</h2>
-        </div>
+        @foreach (var r in Model.Reviews)
+        {
+            <section style="background-color: rgb(243, 194, 166)">
+                <div class="col text-center" style="background-color: #212529">
+                    <h2 style="margin-top: 3%; padding: 1rem; color: white">@r.UserName</h2>
+                </div>
 
-        <div class="row">
-          <div
-            class="col"
-            style="padding: 1.5rem; padding-left: 2rem; padding-right: 2rem"
-          >
-            The Great Gatsby kept me interested until the end. The Great Gatsby
-            was a very good and interesting read. The Great Gatsby had true
-            potential. If you want engaging material, then look no further.The
-            Great Gatsby was well written and engaging. The Great Gatsby evoked
-            emotion. The story was beautifully written, with a consistent style
-            and tone, and efficiency of description that didn't slow the pace.
-            The Great Gatsby was original, and well written. An excellent
-            addition to the genre. The Great Gatsby had standard tropes
-            delivered with a smooth writing style.This was a smooth flowing
-            story with lots of action and very likeable characters. The dialogue
-            in The Great Gatsby was nice and tight. I would recommend The Great
-            Gatsby to any fan of the genre. The Great Gatsby was a great example
-            of the genre.The Great Gatsby was a joy to read.
-          </div>
-        </div>
-        <div class="col text-center" style="padding-bottom: 1.5rem">
-          <i class="bi bi-star-fill orange-txt" style="font-size: 2rem"></i>
-          <i class="bi bi-star-fill orange-txt" style="font-size: 2rem"></i>
-          <i class="bi bi-star-fill orange-txt" style="font-size: 2rem"></i>
-          <i class="bi bi-star-fill orange-txt" style="font-size: 2rem"></i>
-          <i
-            class="bi bi-star-fill"
-            style="color: #252525; font-size: 2rem"
-          ></i>
-        </div>
+                <div class="row">
+                    <div class="col"
+                         style="padding: 1.5rem; padding-left: 2rem; padding-right: 2rem">
+                        @r.Comment
+                    </div>
+                </div>
+                <div class="col text-center" style="padding-bottom: 1.5rem">
+                    @for (var i = 0; i < 5; i++)
+                    {
+                        if (i < r.Value)
+                        {
+                            <i class="bi bi-star-fill orange-txt" style="font-size: 2rem"></i>
+                        }
+                        else
+                        {
+                            <i class="bi bi-star-fill"
+                               style="color: #252525; font-size: 2rem"></i>
+                        }
+
+                    }
+                </div>
+            </section>
+        }
       </section>
     </div>
-
-@foreach (var r in Model.Reviews)
-{
-    <div style="background-color: orchid">
-        <h5>@r.UserName</h5>
-        <h5>@r.Value</h5>
-        <p>@r.Comment</p>
-    </div>
-}
-
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
-
-<partial name="_ReadPartial" />
-<partial name="_FavouriteBookPartial" />
-<partial name="_ReviewPartial" />
