--- a/Web/Views/Shared/_ReviewPartial.cshtml
+++ b/Web/Views/Shared/_ReviewPartial.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Core.Reviews.Commands.Create;
 
-@if (ViewBag.UserId != null)
+@if (Model.UserId != null)
 {
     <div id="partial">
-        @if (ViewBag.UserReview != null)
+        @if (Model.UserReview != null)
         {
             <div class="row reply-userdiv align-items-center">
                 <div class="col">
@@ -15,13 +15,13 @@
                 </div>
             </div>
             <div class="row">
-                <div id="comment-text" class="reply-col">@ViewBag.UserReview.Comment</div>
-                <div id="review-id" hidden class="reply-col">@ViewBag.UserReview.Id</div>
+                <div id="comment-text" class="reply-col">@Model.UserReview.Comment</div>
+                <div id="review-id" hidden class="reply-col">@Model.UserReview.Id</div>
             </div>
             <div class="rating-div col text-center">
                 @for (var i = 1; i <= 5; i++)
                 {
-                    if (i <= ViewBag.UserReview.Value)
+                    if (i <= Model.UserReview.Value)
                     {
                         <i class="bi orange-txt user-ifont bi-star-fill"></i>
                     }
@@ -40,7 +40,7 @@
                         <div class="col">
                             <h2 id="rev">Review:</h2>
                         </div>
-                        <input hidden name="UserId" value=@ViewBag.UserId />
+                        <input hidden name="UserId" value=@Model.UserId />
                         <input hidden name="BookId" value=@Model.Id />
                         <input hidden name="Value" />
                         <input hidden name="Comment" />
@@ -99,8 +99,10 @@
         $.ajax({
                 type: "POST",
                 url: "@Url.Action("CreateReview")",
-                data: {model: {
-                    Value, Comment, BookId, UserId}}
+                data: {command: {
+                    BookId, Value, Comment, UserId
+                }
+            }
             })
             .then((result)=>{
                 AddUserReview(result);
@@ -315,7 +317,7 @@
         headlineDivContainerElement.appendChild(headlineColElement);
 
         let userIdInputElement=document.createElement('input');
-        userIdInputElement.value='@ViewBag.UserId';
+        userIdInputElement.value='@Model.UserId';
         userIdInputElement.setAttribute('name', 'UserId');
         userIdInputElement.setAttribute('hidden', 'true');
 
@@ -377,7 +379,7 @@
             $.ajax({
                 type: "POST",
                 url: "@Url.Action("CreateReview")",
-                data: {model: {
+                data: {command: {
                     Value, Comment, BookId, UserId}}
             })
             .then((result)=>{
